[tool.poetry]
name = "trinistocks.com"
version = "0.1.0"
description = ""
authors = ["Rishi Latchmepersad <latchmepersad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.31"
PyMySQL = "^1.0.2"
bs4 = "^0.0.1"
numpy = "^1.22.2"
pandas = "^1.4.1"
requests = "^2.27.1"
pid = "^3.0.4"
cryptography = "^36.0.1"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
