[tool.poetry]
name = "trinistocks.com"
version = "0.1.0"
description = ""
authors = ["Rishi Latchmepersad <latchmepersad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.31"
bs4 = "^0.0.1"
numpy = "^1.24.2"
pandas = "^1.4.1"
requests = "^2.27.1"
pid = "^3.0.4"
cryptography = "^36.0.1"
lxml = "^4.9.2"
pytest = "^7.1.1"
dateutils = "^0.6.12"
Django = "^3.2"
gunicorn = "^20.1.0"
django-chartjs = "^2.3.0"
django-tables2 = "^2.4.1"
django-cors-headers = "^3.13.0"
django-filter = "^22.1"
django-group-by = "^0.3.1"
djangorestframework = "^3.13.1"
drf-yasg = "^1.20.0"
mysqlclient = "^2.1.1"
django-rest-passwordreset = "^1.2.1"
Pygments = "^2.12.0"
tablib = "^3.2.1"
python-dotenv = "^1.0.0"
selenium = "^4.8.3"
greenlet = "^2.0.2"
isort = "^5.12.0"
typing-extensions = "^4.5.0"
timeunit = "^1.1.0"
fake-useragent = "^1.1.3"
selenium-stealth = "^1.0.6"
undetected-chromedriver = "^3.4.6"
selenium-wire = "^5.1.0"
python-dateutil = "^2.8.2"
camelot-py = "^0.11.0"
opencv-python = "^4.8.0.76"
ghostscript = "^0.7"
matplotlib = "^3.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
